--- a/shop/src/app/app.component.html
+++ b/shop/src/app/app.component.html
@@ -4,9 +4,11 @@
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['/welcome']">Home</a>
     </li>
+
     <li class="nav-item">
-      <a class="nav-link">Product List</a>
+      <a class="nav-link" [routerLink]="['/products']">Product List</a>
     </li>
+
     <li class="nav-item">
       <a class="nav-link">Add Product</a>
     </li>
@@ -21,7 +23,7 @@
     </li>
     <li class="nav-item"
         *ngIf="!isLoggedIn">
-      <a class="nav-link">Log In</a>
+      <a class="nav-link" [routerLink]="['/login']">Log In</a>
     </li>
     <li class="nav-item"
         *ngIf="isLoggedIn">
